@@ -4,13 +4,14 @@ INCLUDE(ManageString)
 
 ## STRING APPEND
 MACRO(STRING_APPEND_TEST testName expected var str)
+    MESSAGE("STRING_APPEND_TEST: ${testName}")
     STRING_APPEND(${var} "${str}" ${ARGN})
     IF("${${var}}" STREQUAL "${expected}")
 	MESSAGE(STATUS "Test STRING_APPEND_${testName} passed")
     ELSE("${${var}}" STREQUAL "${expected}")
 	MESSAGE(SEND_ERROR "Test STRING_APPEND_${testName} failed: actual=|${${var}}| expected=|${expected}|")
     ENDIF("${${var}}" STREQUAL "${expected}")
-ENDMACRO(STRING_APPEND_TEST testName expected var var)
+ENDMACRO(STRING_APPEND_TEST)
 SET(_str "")
 STRING_APPEND_TEST("no_prev" "Hi" _str "Hi")
 STRING_APPEND_TEST("default" "Hi Hello" _str " Hello")
@@ -23,6 +24,38 @@ STRING_APPEND_TEST("1" "%find_lang %{name}" _str " %{name}")
 SET(_str "%find_lang")
 STRING_APPEND_TEST("1" "%find_lang %{name}" _str "%{name}" " ")
 
+## STRING_ESCAPE_QUOTE
+FUNCTION(STRING_ESCAPE_QUOTE_TEST testName expected str)
+    MESSAGE("STRING_ESCAPE_QUOTE_TEST: ${testName}")
+    STRING_ESCAPE_QUOTE(var "${str}")
+    IF("${var}" STREQUAL "${expected}")
+	MESSAGE(STATUS "Test STRING_ESCAPE_QUOTE_${testName} passed")
+    ELSE()
+	MESSAGE(SEND_ERROR "Test STRING_ESCAPE_QUOTE_${testName} failed: actual=|${var}| expected=|${expected}|")
+    ENDIF()
+ENDFUNCTION(STRING_ESCAPE_QUOTE_TEST)
+STRING_ESCAPE_QUOTE_TEST("empty" "" "")
+STRING_ESCAPE_QUOTE_TEST("no_quote" "Hi I am good." "Hi I am good.")
+STRING_ESCAPE_QUOTE_TEST("1 single-quote" "Hi I'm good." "Hi I'm good.")
+STRING_ESCAPE_QUOTE_TEST("1 quote" "This is a \\\"" "This is a \"")
+STRING_ESCAPE_QUOTE_TEST("2 quotes" "\\\"No, it's not\\\", said he." "\"No, it's not\", said he.")
+
+## STRING_ESCAPE_SEMICOLON
+FUNCTION(STRING_ESCAPE_SEMICOLON_TEST testName expected str)
+    MESSAGE("STRING_ESCAPE_SEMICOLON_TEST: ${testName}")
+    STRING_ESCAPE_SEMICOLON(var "${str}")
+    IF("${var}" STREQUAL "${expected}")
+	MESSAGE(STATUS "Test STRING_ESCAPE_SEMICOLON_${testName} passed")
+    ELSE()
+	MESSAGE(SEND_ERROR "Test STRING_ESCAPE_SEMICOLON_${testName} failed: actual=|${var}| expected=|${expected}|")
+    ENDIF()
+ENDFUNCTION(STRING_ESCAPE_SEMICOLON_TEST)
+STRING_ESCAPE_SEMICOLON_TEST("empty" "" "")
+STRING_ESCAPE_SEMICOLON_TEST("no_semicolon" "Hi I am good." "Hi I am good.")
+STRING_ESCAPE_SEMICOLON_TEST("1 semicolon begin" "\;Hi" ";Hi")
+STRING_ESCAPE_SEMICOLON_TEST("1 semicolon middle" "Yo\; How are you" "Yo; How are you")
+STRING_ESCAPE_SEMICOLON_TEST("1 semicolon end" "This is a \;" "This is a ;")
+STRING_ESCAPE_SEMICOLON_TEST("2 semicolons" "\;No, it's not \;, said he." ";No, it's not ;, said he.")
 
 ## STRING QUOTE
 SET(STR_QUOTE_1 "\"hi=hello=how are you=fine\"")
